Added params description

--- a/how to code.ipynb
+++ b/how to code.ipynb
@@ -88,7 +88,7 @@
    },
    "outputs": [],
    "source": [
-    "api_key = YOUR_API_KEY_HERE"
+    "api_key = \"YOUR_API_KEY_HERE\""
    ]
   },
   {
@@ -179,7 +179,7 @@
    },
    "outputs": [],
    "source": [
-    "input_file = location_of_image"
+    "input_file = \"location_of_image\""
    ]
   },
   {
@@ -679,10 +679,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
